# BTClient

./: CMakeLists.txt  README  build.sh  roadmap.txt
include/: bt_client.h  bt_server.h  metainfo.h  peer_client.h  setup.hpp  socket.hpp  tcp_server.hpp
include/clany/: algorithm.hpp  byte_array.hpp  clany_defs.h  cmdparser.hpp  dyn_bitset.hpp
src/: bt_client.cpp  bt_server.cpp  main.cpp  metainfo.cpp  peer_client.cpp
test/: MJ.flv.torrent  fate.mp4 - list.torrent  fate.mp4.torrent
